asupersync-macros/tests/compile_fail/scope_return_in_body.stderr
error: scope! body must not use return; use break or early return pattern
 --> tests/compile_fail/scope_return_in_body.rs:8:9
  |
8 |         return 42;
  |         ^^^^^^^^^
